fixes flex wrap issue causing some render off-screen in blog page

--- a/app/blogs/articles.module.css
+++ b/app/blogs/articles.module.css
@@ -1,7 +1,7 @@
 .postContainer {
     border: 0px solid lightblue;
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
     align-items: center;
     padding: 5rem;
     height: 100vh;
@@ -20,7 +20,6 @@
 .imgContainer {
     /* border: 1px solid blue; */
     width: 100%;
-    /* height: auto; */
     max-width: 500px; /* Adjust the maximum width as needed */
     margin-bottom: 1rem;
 }
@@ -31,6 +30,7 @@
 }
 
 .linkContainer {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
